--- a/OOP_Lab_1/OOP_Lab_1.csproj
+++ b/OOP_Lab_1/OOP_Lab_1.csproj
@@ -53,10 +53,13 @@
     <Reference Include="PresentationFramework" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Factories\CircleFactory.cs" />
     <Compile Include="Factories\EllipseFactory.cs" />
     <Compile Include="Factories\LineFactory.cs" />
     <Compile Include="Factories\MainFactory.cs" />
     <Compile Include="Factories\RectangleFactory.cs" />
+    <Compile Include="Factories\SquareFactory.cs" />
+    <Compile Include="Factories\TriangleFactory.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -69,10 +72,13 @@
     <Compile Include="Form2.Designer.cs">
       <DependentUpon>Form2.cs</DependentUpon>
     </Compile>
+    <Compile Include="Shapes\Circle.cs" />
     <Compile Include="Shapes\Ellipse.cs" />
     <Compile Include="Shapes\Line.cs" />
     <Compile Include="Shapes\Rectangle.cs" />
     <Compile Include="Shapes\Shape.cs" />
+    <Compile Include="Shapes\Square.cs" />
+    <Compile Include="Shapes\Triangle.cs" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs">
